feat(product-purchase-view): link binding to PaymentCommand function

--- a/Views/ProductPurchaseView.axaml
+++ b/Views/ProductPurchaseView.axaml
@@ -356,6 +356,7 @@
                                 Content="{CompiledBinding FormattedTotalPrice, StringFormat='Pay {0}'}" 
                                 HorizontalAlignment="Right"
                                 Padding="15,0"
+                                Command="{CompiledBinding PaymentCommand}"
                                 IsEnabled="{CompiledBinding IsPaymentPossible}"/>
                         </shadui:Card.Footer>
                     </shadui:Card>
