--- a/Components/AddEditProduct/AddEditProductView.axaml
+++ b/Components/AddEditProduct/AddEditProductView.axaml
@@ -54,7 +54,7 @@
 
                     <!-- Column 1 -->
                     <!-- Product Details -->
-                    <Grid Grid.Row="0" Grid.Column="0" RowDefinitions="* * *" VerticalAlignment="Top" RowSpacing="25">
+                    <Grid Grid.Row="0" Grid.Column="0" RowDefinitions="* * *" VerticalAlignment="Top" RowSpacing="20">
                         <shadui:Card Grid.Row="0" VerticalAlignment="Top">
                             <StackPanel>
                                 <shadui:CardTitle Content="Product Details" />
@@ -153,7 +153,7 @@
 
                     <!-- Column 2 -->
                     <!-- Pricing -->
-                    <Grid Grid.Row="0" Grid.Column="1" RowDefinitions="* * * * *" RowSpacing="25" VerticalAlignment="Top">
+                    <Grid Grid.Row="0" Grid.Column="1" RowDefinitions="* * * * *" RowSpacing="15" VerticalAlignment="Top">
                         <shadui:Card Grid.Row="0" VerticalAlignment="Top">
                             <StackPanel>
                                 <shadui:CardTitle Content="Pricing" />
@@ -176,14 +176,40 @@
                                     Margin="0,30,0,0"
                                     shadui:ControlAssist.Label="Discounted Price (Optional)"
                                     Classes="Clearable"
-                                    FormatString="N2"
+                                    FormatString="{CompiledBinding DiscountFormat}"
                                     ShowButtonSpinner="False"
-                                    Watermark="0.00"
+                                    Watermark="0"
                                     Value="{CompiledBinding ProductDiscountedPrice}">
                                     <NumericUpDown.InnerLeftContent>
-                                        <TextBlock Margin="8,0,-8,0" Text="₱" />
+                                        <TextBlock 
+                                            Margin="8,0,-8,0" 
+                                            Text="{CompiledBinding DiscountSymbol}" />
                                     </NumericUpDown.InnerLeftContent>
                                 </NumericUpDown>
+                                <Separator Margin="0,10,0,10"/>
+                                <StackPanel 
+                                    Orientation="Horizontal"
+                                    Spacing="8"
+                                    Margin="10,0,0,0"
+                                    VerticalAlignment="Center"
+                                    HorizontalAlignment="Left">
+                                    <ToggleSwitch 
+                                        shadui:ToggleSwitchAssist.RightAlignedContent="True" 
+                                        IsChecked="{CompiledBinding IsPercentageModeOn, Mode=TwoWay}">
+                                        <ToggleSwitch.OnContent>
+                                            <TextBlock
+                                                VerticalAlignment="Center"
+                                                FontSize="13"
+                                                Text="Percentage Mode On" />
+                                        </ToggleSwitch.OnContent>
+                                        <ToggleSwitch.OffContent>
+                                            <TextBlock
+                                                VerticalAlignment="Center"
+                                                FontSize="13"
+                                                Text="Percentage Mode Off" />
+                                        </ToggleSwitch.OffContent>
+                                    </ToggleSwitch>
+                                </StackPanel>
                             </StackPanel>
                         </shadui:Card>
 
